--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,25 @@
 	</properties>
 
 	<dependencies>
+	
+<dependency>
+    <groupId>org.springframework.hateoas</groupId>
+    <artifactId>spring-hateoas</artifactId>
+    <version>0.23.0.RELEASE</version>
+</dependency>
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons-core</artifactId>
+			<version>1.4.1.RELEASE</version>
+		</dependency>
 		
+<dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-commons</artifactId>
+    <version>1.13.1.RELEASE</version>
+</dependency>
+
 
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -55,7 +72,7 @@
 			</exclusions>
 		</dependency>
 
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -88,6 +105,14 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.4-1200-jdbc4</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.github.dblock.waffle</groupId>
+					<artifactId>waffle-jna</artifactId>
+
+				</exclusion>
+
+			</exclusions>
 		</dependency>
 
 
@@ -106,7 +131,7 @@
 		</dependency>
 
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 			<version>2.4.0</version>
@@ -120,9 +145,13 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.4.0</version>
-		</dependency>
+		</dependency> -->
 
-
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -173,29 +202,47 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-jpamodelgen</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 			<version>1.9.0.RELEASE</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-webmvc</artifactId>
 			<version>2.3.2.RELEASE</version>
-		</dependency>
-		
+		</dependency> -->
+
+<dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-rest-webmvc</artifactId>
+    <version>2.6.4.RELEASE</version>
+    <exclusions>
+    <exclusion>
+    <groupId>org.springframework.hateoas</groupId>
+    <artifactId>spring-hateoas</artifactId>
+    </exclusion>
+    </exclusions>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-rest-core</artifactId>
+    <version>2.6.4.RELEASE</version>
+</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
+
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-rest</artifactId>
-        </dependency>
-		
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
